--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <section class="sec">
         <header class="">
             <a href="#"><img src="./assets/img/logo.png" alt="Logo Pepsi" class="logo"></a>
-            <nav>
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Producto</a></li>
-                    <li><a href="#">Lo mas nuevo</a></li>
-                    <li><a href="#">Informacion</a></li>
-                    <li><a href="#">Contactanos</a></li>
-                </ul>
-            </nav>
+                <nav class="toggleMenu" onclick="menuToggle()">
+                    <ul class="navegation">
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Producto</a></li>
+                        <li><a href="#">Lo mas nuevo</a></li>
+                        <li><a href="#">Informacion</a></li>
+                        <li><a href="#">Contactanos</a></li>
+                    </ul>
+                </nav>
         </header>
         <div class="content">
             <div class="textBox">
